# WebGPU

./: .flake8  .gitignore  .pre-commit-config.yaml  Cube.tgz  Qt.py  README.md  TODO.md  cube.py  cube2.py  fragment_shader.wgsl  hello_triangle.py  pyproject.toml  quad.py
BlankWebGPU/: README.md  WebGPUWidget.py  err  main.py  pyproject.toml
Cube/: Qt.py  WebGPU.py  WebGPUWidget.py  main.py  requirments.txt  vertex_shader.wgsl
FirstTriangle/: QtTri.py  pyproject.toml  tri_term.py  tri_to_file.py  try_term.py
ParticleSystem/: WebGPUWidget.py  main.py  pyproject.toml
ParticleSystems/ParticleQuads/: Emitter.py  main.py  particle_shader.wgsl  pyproject.toml
ParticleSystems/SimpleNumpy/: Emitter.py  EmitterVec3.py  FirstPersonCamera.py  WebGPUWidget.py  main.py  particle_shader.wgsl  pyproject.toml
Primitives/: FirstPersonCamera.py  PipelineShaders.py  Pipelines.py  Primitives.py  Qt.py  WebGPU.py  WebGPUCanvas.py  convert.py  line_shader.wgsl  main.py  pyproject.toml
Primitives/PrimData/: cube.npy  dodecahedron.npy  football.npy  icosahedron.npy  octahedron.npy  pack_arrays.py  teapot.npy  tetrahedron.npy  troll.npy
QtWidget/: WebGPUWidget.py  main.py
